fix(outages): make service name more visible

--- a/scss/includes/outage-list.scss
+++ b/scss/includes/outage-list.scss
@@ -22,4 +22,14 @@
 		font-weight: bolder;
 		/* border-top: 1px solid #333; */
 	}
+	.service-name {
+		font-size: smaller;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		/*
+		direction: rtl;
+		text-align: right;
+		*/
+	}
 }
